[project]
name = "group-sms-chat"
version = "0.0.1"
requires-python = "==3.13.5"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

mypy_path = "."
follow_imports = "normal"
warn_redundant_casts = true
disallow_any_generics = true
strict_equality = true
ignore_missing_imports = false
no_implicit_reexport = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "EM", "EXE", "FA", "FBT", "ICN", "INP", "PIE", "PT", "Q", "RET", "SIM", "T20", "TID", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "RUF"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D200", "D203", "D205", "D400", "D415", "D212", "PLR6301", "RUF029",
    "ANN401", "PLR0913", "FBT001", "FBT002", "S105", "S106", "FA100", "FA102", "COM812", "C901"
]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]